<resources>
    <string name="app_name">QCList</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don"'"t have an account ?</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="txt_qc_list">QC List</string>

    <!--quality analysis activity-->
    <string name="txt_quality_analysis">Quality Analysis</string>
    <string name="txt_gate_id">GateID</string>
    <string name="txt_mc">MC</string>
    <string name="txt_moldy">Moldy</string>
    <string name="txt_burn">Burn</string>
    <string name="txt_odor">Odor</string>
    <string name="txt_remark">Remark</string>
    <string name="btn_approve">Approve</string>

    <!--Tablayout Barcode-->
    <string name="txt_choviet">Chợ việt</string>
    <string name="txt_congdong">Cộng đồng</string>
    <string name="txt_tinhan">Tin nhắn</string>
    <string name="txt_toi">Tôi</string>
</resources>
