<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context=".View.LoginActivity.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_edittext_login"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="#7c7c7c"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edittext_login_password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="#7c7c7c"
            android:textSize="14sp" />
        <!-- Login Button -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/rounded_button"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />
        <!-- Link to Login Screen -->
        <RelativeLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip">
            <Button
                android:gravity="center"
                android:id="@+id/btn_anccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="#4d4d4d"
                android:textSize="15dp" />
            <Button
                android:gravity="center"
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btn_anccount"
                android:background="@android:color/transparent"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="#0077bb"
                android:textSize="15dp" />
        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>