<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".View.QualityAnalysit.QualityAnalysitActivity">

    <include
        layout="@layout/custom_toolbar_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/nameBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="DR/19009/1298"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textLarger" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_item_16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title_gateId_quality_analysis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/txt_gate_id"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />

                <EditText
                    android:focusable="false"
                    android:id="@+id/edt_gateId_quality_analysis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title_mc_quality_analysis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/txt_mc"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />

                <EditText
                    android:id="@+id/edt_mc_quality_analysis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title_moldy_quality_analysis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/txt_moldy"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />

                <EditText
                    android:id="@+id/edt_moldy_quality_analysis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_burn_moldy_quality_analysis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/txt_burn"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />

                <EditText
                    android:id="@+id/edt_burn_quality_analysis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_odor_moldy_quality_analysis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/txt_odor"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />

                <EditText
                    android:id="@+id/edt_odor_quality_analysis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_remark_moldy_quality_analysis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/txt_remark"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />

                <EditText
                    android:id="@+id/edt_remark_quality_analysis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textLarge" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_approve_quality_analysis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_item_8dp"
                android:background="@drawable/custom_button_approve"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/btn_approve"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textLarge" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>